--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ p.value-medium {
     font-size: 45px;
     font-weight: 600;
 }
+p.value-medium-large {
+    font-size: 65px;
+    font-weight: 600;
+}
 p.value-large {
     font-size: 80px;
     font-weight: 600;
